Fixed logo overflow in navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,6 @@
     color: white;
 }
 .logo {
-    margin-top: 5px;
     height: 7vh;
 }
 .nav-menu-toggle-btn {
